deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vapostore-uber-mobil-admin
  labels:
    app: vapostore-uber-mobil-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vapostore-uber-mobil-admin
  template:
    metadata:
      labels:
        app: vapostore-uber-mobil-admin
    spec:
      containers:
        - name: vapostore-uber-mobil-admin
          image: registry.meko.ac/vapostore_uber-mobil_admin_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5173
      imagePullSecrets:
        - name: nexus-registry-secret
---
# --- Service backend (ClusterIP interne) ---
apiVersion: v1
kind: Service
metadata:
  name: vapostore-uber-mobil-admin-service
spec:
  type: NodePort  
  selector:
    app: vapostore-uber-mobil-admin
  ports:
    - port: 5173
      targetPort: 5173
      nodePort: 30073
---
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging.clicknvape.fr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"   # <--- important !
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - staging.clicknvape.fr
    secretName: "staging.clicknvape.fr-tls-acme"
  rules:
  - host: staging.clicknvape.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vapostore-uber-mobil-admin-service
            port:
              number: 5173
